use JVM default settings on Java8